Synthetic commit for incomplete tag STORABLE-OBJECT-ALWAYS-TRANSFERABLE